# claude-code-setup

./: .gitignore  .markdownlintignore  CLAUDE.md  CLAUDE.md.template  CLAUDE.template.md  ISSUES.md  README.md  dev-install.sh  install.sh  test-hooks.sh
.claude/: settings.json
agents/: data-analyst.md  data-engineer.md  doc-editor.md  infrastructure-engineer.md  ml-engineer.md  product-designer.md  qa-engineer.md  security-engineer.md  senior-data-analyst.md  senior-data-engineer.md  senior-infrastructure-engineer.md  senior-ml-engineer.md  senior-product-designer.md  senior-qa-engineer.md  senior-security-engineer.md  senior-software-engineer.md  senior-technical-writer.md  software-engineer.md  tech-lead.md  technical-writer.md
flux/: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
flux/src/: lib.rs  main.rs  validation.rs
flux/src/commands/: init.rs  mod.rs  self_update.rs  signal.rs  status.rs
flux/src/commands/runner/: helpers.rs  mod.rs  serialization.rs
flux/src/commands/status/: diagnostics.rs  display.rs  validation.rs
flux/src/commands/track/: helpers.rs  mod.rs  serialization.rs
flux/src/fs/: mod.rs  work_dir.rs
flux/src/git/: branch.rs  merge.rs  mod.rs  worktree.rs
flux/src/models/: handoff.rs  mod.rs  runner.rs  serialization.rs  session.rs  signal.rs  stage.rs  track.rs  worktree.rs
flux/src/orchestrator/: attach.rs  continuation.rs  core.rs  mod.rs  monitor.rs  signals.rs  spawner.rs
flux/src/parser/: markdown.rs
flux/src/verify/: transitions.rs
hooks/: ask-user-post.sh  ask-user-pre.sh  commit-filter.sh  commit-guard.sh  (+11 more)
(+368 files in other folders)
