[package]
name = "flux"
version = "0.1.0"
edition = "2021"
description = "Self-propelling agent orchestration CLI"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
colored = "2"
reqwest = { version = "0.12", features = ["blocking", "json"] }
semver = "1"
zip = "0.6"
dirs = "5"
minisign-verify = "0.2.4"
sha2 = "0.10.9"
hex = "0.4.3"

[dev-dependencies]
tempfile = "3.24.0"
